Correction small screen

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   
   body {
     margin-top: 100px;
+    margin-bottom: 60px;
   }
   
   h1,
@@ -95,4 +96,31 @@
     box-shadow: var(--box-shadow);
     color: white;
   }
+  
+
+  @media (max-width: 576px) {
+    h1 {
+      font-size: 48px;
+      line-height: 1.5;
+    }
+
+    h2 {
+        font-size: 32px;
+        text-align: center;
+      }
+    
+      p {
+        text-align: center;
+      }
+    
+      .primary-link {
+        display: block;
+        text-align: center;
+        margin: 0 20px;
+      }
+    }
+
+    .container {
+        margin-bottom: 40px;
+    }
   
